# build-a-proto

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Cross.toml  PLAN.md  README.md  ROADMAP.md  abc.baproto  def.baproto  example.baproto  plan.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/actions/cargo-build/: action.yml
.github/actions/parse-rust-version/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: build-baproto.yml  check-commit.yml  release-please.yml
docs/: commands.md  installation.md
scripts/: install.ps1  install.sh
src/: lib.rs  main.rs
src/analyze/: diagnostic.rs  error.rs  field_index.rs  mod.rs  reporter.rs  symbol.rs  type_reference.rs
src/analyze/analyzers/: field_index.rs  mod.rs  type_reference.rs
src/analyze/diagnostic/: diagnostic.rs
src/analyze/pass/: cycles.rs  encoding.rs  indices.rs  limits.rs  mod.rs  names.rs  registration.rs  resolution.rs  types.rs  values.rs
src/analyze/report/: diagnostic.rs  mod.rs  reporter.rs
src/ast/: comment.rs  encoding.rs  enumeration.rs  message.rs  mod.rs  package.rs  schema.rs  types.rs
src/cmd/: compile.rs  mod.rs
src/compile/: collect.rs  compiler.rs  linker.rs  mod.rs  prepare.rs  register.rs  source.rs  symbol.rs
src/core/: descriptor.rs  enumeration.rs  import.rs  message.rs  mod.rs  package.rs  path.rs  reference.rs  registry.rs  types.rs
src/generate/: api.rs  code.rs  external.rs  generator.rs  mod.rs  writer.rs
src/generate/code/: writer.rs
src/generate/codegen/: mod.rs  rust.rs
src/generate/generator/: external.rs  mod.rs  rust.rs
src/generate/lang/: gdscript.rs  mod.rs  rust.rs  rust_gen.rs
src/generate/language/: mod.rs  rust.rs
src/generate/write/: file.rs  mod.rs  string.rs
src/generate2/: external.rs  mod.rs  writer.rs
src/generate2/code/: mod.rs
src/generate2/codegen/: mod.rs  rust.rs
src/generate2/lang/: rust.rs
src/ir/: encoding.rs  enumeration.rs  field.rs  message.rs  mod.rs  package.rs
src/ir/lower/: comment.rs  encoding.rs  enumeration.rs  field.rs  message.rs  mod.rs  schema.rs  types.rs
src/lex/: input.rs  lexer.rs  mod.rs  syntax.rs  token.rs  types.rs
src/parse/: comment.rs  convert.rs  encoding.rs  enumeration.rs  expr.rs  lexer.rs  message.rs  mod.rs  package.rs  parser.rs  schema.rs  types.rs
src/parser/: mod.rs  parse.rs
src/syntax/: mod.rs  package.rs
src/visit/: mod.rs  visitable.rs  visitor.rs  walk.rs
tests/: compile.rs
tests/common/: assertions.rs  golden.rs  mod.rs
tests/golden/: arrays_and_maps.rs  cross_file_imports.rs  doc_comments.rs  empty_message.rs  encodings.rs  enums.rs  multiple_files_same_package.rs  nested_messages.rs  simple_types.rs
tests/testdata/: collections.baproto  doc_comments.baproto  duplicate_indices.baproto  empty_message.baproto  encodings.baproto  enums.baproto  imports_base.baproto  imports_dependent.baproto  invalid_type_ref.baproto  nested_messages.baproto  simple_types.baproto
tests/testdata/golden/: collections.rs  cross_file_imports.rs  doc_comments.rs  empty_message.rs  (+5 more)
