[package]
  name         = "baproto"
  version      = "0.1.4"
  description  = "An interface definition language (IDL) compiler for creating custom, bit-level binary encodings with an emphasis on supporting networked simulations."
  edition      = "2024"
  rust-version = "1.87.0"

[dependencies]
  anyhow         = "1.0.100"
  ariadne        = {version = "0.6.0", features = ["auto-color"]}
  chumsky        = {version = "0.12.0", features = ["lexical-numbers"]}
  clap           = {version = "4.5.54", features = ["cargo", "derive"]}
  derive_builder = "0.20.2"
  derive_more    = {version = "2.1.1", features = ["display"]}
  itertools      = "0.14.0"
  serde          = {version = "1.0.228", features = ["derive"]}
  serde_json     = "1.0.148"
  thiserror      = "2.0.17"

[dev-dependencies]
  assert_cmd = "2.0"
  rstest     = {version = "0.26.1", default-features = false}
  syn        = {version = "2.0.113", features = ["full", "parsing"]}
  tempfile   = "3.24.0"
